--- a/paises/src/app/public/lista-paises/lista-paises.component.html
+++ b/paises/src/app/public/lista-paises/lista-paises.component.html
@@ -1,1 +1,37 @@
-<p>lista-paises works!</p>
+<mat-card>
+<form class="form">
+    <mat-form-field class="full-width">
+      <mat-label>Buscar Pais</mat-label>
+      <input matInput placeholder="Pais" value="" (change)="consultar($event)" />
+    </mat-form-field>
+</form>
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+  
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="Pais">
+        <th mat-header-cell *matHeaderCellDef> Pais </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+  
+      <!-- Weight Column -->
+      <ng-container matColumnDef="Bandera">
+        <th mat-header-cell *matHeaderCellDef> Bandera </th>
+        <td mat-cell *matCellDef="let element"><img mat-card-sm-image src="{{element.flag}}">  </td>
+      </ng-container>
+  
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="Accion">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </div>
+</mat-card>
