--- a/paises/src/app/public/lista-paises/lista-paises.component.html
+++ b/paises/src/app/public/lista-paises/lista-paises.component.html
@@ -1,10 +1,18 @@
-<mat-card>
-<form class="form">
-    <mat-form-field class="full-width">
-      <mat-label>Buscar Pais</mat-label>
-      <input matInput placeholder="Pais" value="" (change)="consultar($event)" />
-    </mat-form-field>
-</form>
+<mat-toolbar  class="toolbar">
+  <span>Prueba Tecnica</span>
+  
+ <span class="spacer"></span>
+ 
+ <mat-form-field >  
+  <input matInput placeholder="Buscar Pais" value="" (change)="consultar($event)" />
+</mat-form-field>
+
+ <button (click)="favoritos()" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" > 
+   <mat-icon>{{(fav) ? 'favorite' : 'favorite_border'}}</mat-icon>
+ </button>
+</mat-toolbar>
+<div class="root" >
+<mat-card class="paper" >
 
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
@@ -12,26 +20,33 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="Pais">
-        <th mat-header-cell *matHeaderCellDef> Pais </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef  class="column-pais"> Pais </th>
+        <td mat-cell *matCellDef="let element" > {{element.name}} </td>
       </ng-container>
   
-      <!-- Weight Column -->
+      <!-- Bandera Column -->
       <ng-container matColumnDef="Bandera">
         <th mat-header-cell *matHeaderCellDef> Bandera </th>
         <td mat-cell *matCellDef="let element"><img mat-card-sm-image src="{{element.flag}}">  </td>
       </ng-container>
   
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="Accion">
-        <th mat-header-cell *matHeaderCellDef>  </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <!-- Accion Column -->
+      <ng-container matColumnDef="Accion" justify="end">
+        <th mat-header-cell *matHeaderCellDef class="header-align-right"> Acciones </th>
+        <td mat-cell *matCellDef="let element" class="header-align-right"> 
+            <button mat-icon-button color="primary" aria-label="Favorito">
+                <mat-icon aria-hidden="false" aria-label="Like" (click)="setLike(element.name)">{{(getLike(element.name)) ? 'favorite' : 'favorite_border'}}</mat-icon>
+              </button>
+              <button mat-raised-button color="primary"   (click)="openDialog(element.name)">Información</button>
+            </td>
       </ng-container>
+      
   
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
     </table>
   
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
 </mat-card>
+</div>
